[package]
name = "raphtory-arrow"
version = "0.8.1"
documentation = "https://raphtory.readthedocs.io/en/latest/"
repository = "https://github.com/Raphtory/raphtory-arrow/"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Raphtory/raphtory-arrow/"
keywords = ["graph", "temporal-graph", "temporal"]
authors = ["Pometry"]
rust-version = "1.77"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raphtory-api = { path = "../raphtory-api", version = "0.8.1" }
ahash = { version = "0.8", features = ["serde"] }
bincode = "1.3.3"
bytemuck = "1.16.0"
itertools = "0.12.1"
memmap2 = "0.9.4"
num-traits = "0.2.19"
once_cell = "1.19.0"
parking_lot = "0.12.2"
polars-arrow = "0.39.2"
polars-parquet = { version = "0.39.2", features = ["compression"] }
polars-utils = "0.39.2"
rayon = "1.10.0"
serde = "1.0.201"
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.60"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twox-hash = "1.6.3"

[dev-dependencies]
proptest = "1.4.0"
tracing-test = "0.2.4"
