[package]
name = "raphtory-benchmark"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { workspace = true }
raphtory = { path = "../raphtory", features = [
    "io",
    "proto",
    "vectors",
], version = "0.16.0" }
raphtory-api = { path = "../raphtory-api", version = "0.16.0" }
sorted_vector_map = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
fake = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "vectorise"
path = "bin/vectorise.rs"

[[bench]]
name = "tgraph_benchmarks"
harness = false

[[bench]]
name = "base"
harness = false

[[bench]]
name = "parameterized"
harness = false

[[bench]]
name = "graph_ops"
harness = false

[[bench]]
name = "algobench"
harness = false

[[bench]]
name = "edge_add"
harness = false

[[bench]]
name = "materialise"
harness = false

[[bench]]
name = "proto_encode"
harness = false

[[bench]]
name = "proto_decode"
harness = false

[[bench]]
name = "arrow_algobench"
harness = false
required-features = ["storage"]

[[bench]]
name = "search_bench"
harness = false
required-features = ["search"]

[[bench]]
name = "vectors"
harness = false

[[bench]]
name = "index_bench"
harness = false
required-features = ["search"]

[features]
search = ["raphtory/search"]
storage = ["raphtory/storage"]
