[package]
name = "raphtory-core"
description = "Raphtory core components"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
raphtory-api = { workspace = true, features = ["arrow"] }
dashmap = { workspace = true, features = ["raw-api"] }
hashbrown = { workspace = true }
either = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
iter-enum = { workspace = true }
bigdecimal = { workspace = true }
lock_api = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
ouroboros = { workspace = true }
arrow-array = { workspace = true}
regex = { workspace = true }
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
arrow = ["raphtory-api/arrow"]
python = ["dep:pyo3", "raphtory-api/python"]
