[package]
name = "raphtory-cypher"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2.workspace = true

lazy_static = "1.4.0"
pest = "2.7.8"
pest_derive = "2.7.8"
sqlparser = "0.44.0"

# polars-core = { version = "0.38", features = ["lazy", "fmt", "dtype-struct"] }
# polars-arrow = { version = "0.38", features = ["arrow_rs"] }
# polars-lazy = { version = "0.38", features = ["list_eval"] }

datafusion = { version = "37" }
async-trait = "0.1.73"
futures = "0.3"
arrow = { version = "51" }
arrow-buffer = { version = "51"}
arrow-schema = { version = "51"}
arrow-data = { version = "51"}
arrow-array = { version = "51"}

raphtory = { path = "../raphtory" }
rayon.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile.workspace = true
rand.workspace = true
tokio.workspace = true
clap.workspace = true
