[package]
name = "raphtory-cypher"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars-arrow = { workspace = true }
polars-parquet = { workspace = true }

lazy_static = "1.4.0"
pest = "2.7.8"
pest_derive = "2.7.8"
sqlparser = "0.43.1"

datafusion = { version = "36" }
async-trait = "0.1.73"
futures = "0.3"
arrow = { version = "50" }
arrow-buffer = { version = "50" }
arrow-schema = { version = "50" }
arrow-data = { version = "50" }
arrow-array = { version = "50" }

raphtory = { path = "../raphtory" }
rayon.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true

[dev-dependencies]
proptest.workspace = true
pretty_assertions = { workspace = true }
tempfile.workspace = true
rand.workspace = true
tokio.workspace = true
clap.workspace = true
