[package]
name = "raphtory-filter"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
raphtory-storage = { path = "../raphtory-storage", version = "0.15.1" }
raphtory-api = { path = "../raphtory-api", version = "0.15.1" }