[package]
name = "raphtory-graphql"
description = "Raphtory GraphQL server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
raphtory = { path = "../raphtory", version = "0.11.3", features = [
    'vectors',
    'search',
    "io",
] }
raphtory-api = { path = "../raphtory-api", version = "0.11.3" }
base64 = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
oauth2 = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true, features = ["apollo_tracing"] }
dynamic-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp =  { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
ordered-float = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
url = { workspace = true }
base64-compat = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }
# python binding optional dependencies
pyo3 = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
minijinja = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
storage = ["raphtory/storage"]
python = ["dep:pyo3", "raphtory/python"]
