[package]
name = "raphtory-graphql"
description = "Raphtory GraphQL server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
raphtory = { path = "../raphtory", version = "0.16.0", features = [
    'vectors',
    'search',
    "io",
] }
raphtory-api = { path = "../raphtory-api", version = "0.16.0" }
raphtory-storage = { path = "../raphtory-storage", version = "0.16.0" }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
spki = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true, features = ["apollo_tracing"] }
dynamic-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
futures-util = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
ordered-float = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
url = { workspace = true }
base64-compat = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
moka = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }

# python binding optional dependencies
pyo3 = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
minijinja = { workspace = true }
zip = { workspace = true }
clap = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
arrow-array = { workspace = true }

[features]
storage = ["raphtory/storage"]
python = ["dep:pyo3", "raphtory/python"]
search = ["raphtory/search"]
