[package]
name = "raphtory-io"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raphtory = { path = "../raphtory", version = "0.3.1" }
reqwest = { version = "0.11.14", features = ["blocking"] }
neo4rs = "0.6.0"
csv = "1.1.6"
serde = { version = "1", features = ["derive","rc"] }
rayon = "1"
regex = "1"
chrono = "0.4"
itertools="0.10"

bzip2 = "0.4"
flate2 = "1.0"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
