[package]
name = "raphtory-storage"
description = "Raphtory storage interface"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
raphtory-api = { workspace = true }
raphtory-core = { workspace = true }
rayon = { workspace = true }
iter-enum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
thiserror = { workspace = true }
pometry-storage = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
parking_lot = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
storage = ["raphtory-api/storage", "dep:pometry-storage", "dep:bigdecimal", "dep:num-traits"]
