[package]
name = "raphtory-storage"
description = "Raphtory storage interface"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
raphtory-api = { workspace = true }
raphtory-api-macros = { workspace = true }
raphtory-core = { workspace = true }
storage.workspace = true
db4-graph.workspace = true
parking_lot.workspace = true
rayon = { workspace = true }
iter-enum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
thiserror = { workspace = true }
bigdecimal = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

