[package]
name = "docbrown-core"
version.workspace = true
edition = "2021"
keywords = ["graph", "temporal-graph", "temporal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roaring={ version = "0.10", features = ["serde"] }
itertools="0.10"
# csv = "1.1.6"
replace_with = "0.1"
thiserror = "1"
rand = "0.8.5"
sorted_vector_map = "0.1"
# flume = "0.10"
futures = "0.3"
genawaiter = "0.99"
parking_lot = { version = "0.12" , features = ["serde", "arc_lock"] }
serde = { version = "1", features = ["derive","rc"] }
bincode = "1"

# crossbeam = "0.8"
# crossbeam-utils = "0.8"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
criterion = "0.4"
quickcheck = "1"
quickcheck_macros = "1"
csv = "1"

[[bench]]
name = "tgraph_benchmarks"
harness = false

# [profile.release]
# debug = 1

# [rust]
# debuginfo-level = 1
