[package]
name = "docbrown-core"
description = "Core package for DocBrown, a temporal graph library"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roaring={ version = "0.10", features = ["serde"] }
itertools="0.10"
# csv = "1.1.6"
replace_with = "0.1"
thiserror = "1"
rand = "0.8.5"
sorted_vector_map = "0.1"
# flume = "0.10"
futures = "0.3"
genawaiter = "0.99"
parking_lot = { version = "0.12" , features = ["serde", "arc_lock"] }
serde = { version = "1", features = ["derive","rc"] }
bincode = "1"
rayon = "1"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }

# crossbeam = "0.8"
# crossbeam-utils = "0.8"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.4"
quickcheck = "1"
quickcheck_macros = "1"
csv = "1"
pretty_assertions = "1"

[[bench]]
name = "tgraph_benchmarks"
harness = false

# [profile.release]
# debug = 1

# [rust]
# debuginfo-level = 1
